--- a/css/company.css
+++ b/css/company.css
@@ -16,7 +16,7 @@
   color: #000;
 }
 #header h1:hover,
-#header li:hover{
+#header li:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
@@ -29,10 +29,10 @@
   justify-content: space-between;
   font-weight: bold;
 }
-#header li{
+#header li {
   color: #000;
 }
-#header a{
+#header a {
   text-decoration: none;
 }
 
@@ -52,80 +52,38 @@
   line-height: 15.5rem;
 }
 
-#main {
-  height: 65rem;
+#main{
+  height: 35rem;
   width: 100%;
   position: relative;
 }
-.contents {
-  height: 85%;
-  width: 70%;
+.table-div{
+  height: 70%;
+  width: 63%;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-wrap: wrap;
+  transform: translate(-50%,-50%);
 }
-.first,
-.second,
-.third,
-.fourth {
-  height: 25%;
+#main table{
   width: 100%;
-  border-top: 0.1px solid gray;
-  box-sizing: border-box;
-  padding: 1.5rem 0rem;
-  display: flex;
+  border-collapse: collapse;
 }
-.fourth {
-  border-bottom: 0.1px solid gray;
+#main tr{
+  border-bottom: 0.1px solid #000;
 }
-.first-image,
-.second-image,
-.third-image,
-.fourth-image {
-  height: 100%;
-  width: 27%;
+#main td{
+  text-align: left;
 }
-.first-image {
-  background: url(../img/service1.png) no-repeat;
-  background-position: center;
-  background-size: cover;
+#main th{
+  width: 30%;
+  padding:1.6rem 0rem;
+  text-align: center;
 }
-.second-image {
-  background: url(../img/service2.png);
-  background-position: center;
-  background-size: cover;
+#main tr:first-child{
+  border-top: 0.1px solid #000;
 }
-.third-image {
-  background: url(../img/service3.png);
-  background-position: center;
-  background-size: cover;
-}
-.fourth-image {
-  background: url(../img/service4.png);
-  background-position: center;
-  background-size: cover;
-}
-.first-text,
-.second-text,
-.third-text,
-.fourth-text {
-  height: 100%;
-  width: 70%;
-  margin-left: 2.3rem;
-}
-#main h1 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-#main h3 {
-  font-weight: normal;
-  line-height: 1.5rem;
-}
+
 
 #FAQ {
   height: 21rem;
@@ -162,7 +120,7 @@
   margin-top: 1.5rem;
   cursor: pointer;
 }
-#FAQ button:hover{
+#FAQ button:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
@@ -199,14 +157,14 @@
 #footer li:first-child {
   border-left: none;
 }
-#footer a{
+#footer a {
   text-decoration: none;
   border-left: 0.1px solid #fff;
 }
-#footer a:first-child{
+#footer a:first-child {
   border-left: none;
 }
-#footer li:hover{
+#footer li:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
