--- a/css/news.css
+++ b/css/news.css
@@ -16,7 +16,7 @@
   color: #000;
 }
 #header h1:hover,
-#header li:hover{
+#header li:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
@@ -29,10 +29,10 @@
   justify-content: space-between;
   font-weight: bold;
 }
-#header li{
+#header li {
   color: #000;
 }
-#header a{
+#header a {
   text-decoration: none;
 }
 
@@ -53,78 +53,48 @@
 }
 
 #main {
-  height: 65rem;
+  height: 24rem;
   width: 100%;
   position: relative;
 }
-.contents {
-  height: 85%;
-  width: 70%;
+.main-text {
+  height: 58%;
+  width: 62.5%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  display: flex;
-  flex-wrap: wrap;
 }
-.first,
-.second,
-.third,
-.fourth {
-  height: 25%;
+.main-text1,
+.main-text2,
+.main-text3 {
+  height: 30%;
   width: 100%;
-  border-top: 0.1px solid gray;
-  box-sizing: border-box;
-  padding: 1.5rem 0rem;
-  display: flex;
+  background-color: #fff;
+  border: 0.1px solid gray;
+  color: #000;
 }
-.fourth {
-  border-bottom: 0.1px solid gray;
+.main-text2 {
+  box-sizing: content-box;
+  margin: 0.55rem 0;
 }
-.first-image,
-.second-image,
-.third-image,
-.fourth-image {
-  height: 100%;
-  width: 27%;
-}
-.first-image {
-  background: url(../img/service1.png) no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-.second-image {
-  background: url(../img/service2.png);
-  background-position: center;
-  background-size: cover;
-}
-.third-image {
-  background: url(../img/service3.png);
-  background-position: center;
-  background-size: cover;
-}
-.fourth-image {
-  background: url(../img/service4.png);
-  background-position: center;
-  background-size: cover;
-}
-.first-text,
-.second-text,
-.third-text,
-.fourth-text {
-  height: 100%;
-  width: 70%;
-  margin-left: 2.3rem;
-}
-#main h1 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-#main h3 {
+#main h2 {
+  line-height: 4.176rem;
   font-weight: normal;
-  line-height: 1.5rem;
+  margin-left: 1.3rem;
+}
+#main span {
+  margin-left: 0.65rem;
+  font-weight: bold;
+}
+#main a {
+  text-decoration: none;
+}
+.main-text1:hover,
+.main-text2:hover,
+.main-text3:hover {
+  transition: 0.5s;
+  opacity: 0.8;
 }
 
 #FAQ {
@@ -162,7 +132,7 @@
   margin-top: 1.5rem;
   cursor: pointer;
 }
-#FAQ button:hover{
+#FAQ button:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
@@ -199,14 +169,14 @@
 #footer li:first-child {
   border-left: none;
 }
-#footer a{
+#footer a {
   text-decoration: none;
   border-left: 0.1px solid #fff;
 }
-#footer a:first-child{
+#footer a:first-child {
   border-left: none;
 }
-#footer li:hover{
+#footer li:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
