--- a/css/reqruit.css
+++ b/css/reqruit.css
@@ -16,7 +16,7 @@
   color: #000;
 }
 #header h1:hover,
-#header li:hover{
+#header li:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
@@ -29,10 +29,10 @@
   justify-content: space-between;
   font-weight: bold;
 }
-#header li{
+#header li {
   color: #000;
 }
-#header a{
+#header a {
   text-decoration: none;
 }
 
@@ -53,78 +53,55 @@
 }
 
 #main {
-  height: 65rem;
+  height: 47rem;
   width: 100%;
   position: relative;
 }
-.contents {
-  height: 85%;
-  width: 70%;
+.contents1 {
+  height: 50%;
+  width: 62.5%;
   position: absolute;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-wrap: wrap;
+  transform: translate(-50%, 0%);
 }
-.first,
-.second,
-.third,
-.fourth {
-  height: 25%;
-  width: 100%;
-  border-top: 0.1px solid gray;
+.contents2 {
+  height: 50%;
+  width: 62.5%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, 0%);
+}
+.contents-title {
+  font-size: 1.6rem;
+  margin-top: 5.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 0.1px solid #000;
   box-sizing: border-box;
-  padding: 1.5rem 0rem;
-  display: flex;
 }
-.fourth {
-  border-bottom: 0.1px solid gray;
-}
-.first-image,
-.second-image,
-.third-image,
-.fourth-image {
-  height: 100%;
-  width: 27%;
-}
-.first-image {
-  background: url(../img/service1.png) no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-.second-image {
-  background: url(../img/service2.png);
-  background-position: center;
-  background-size: cover;
-}
-.third-image {
-  background: url(../img/service3.png);
-  background-position: center;
-  background-size: cover;
-}
-.fourth-image {
-  background: url(../img/service4.png);
-  background-position: center;
-  background-size: cover;
-}
-.first-text,
-.second-text,
-.third-text,
-.fourth-text {
-  height: 100%;
-  width: 70%;
-  margin-left: 2.3rem;
-}
-#main h1 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-#main h3 {
+.contents-text h3 {
+  font-size: 1rem;
   font-weight: normal;
-  line-height: 1.5rem;
+  margin: 1.5rem 0rem;
+}
+#main table {
+  height: 50%;
+  width: 100%;
+  border: 0.1px solid #000;
+  border-collapse: collapse;
+}
+#main th {
+  background-color: #f5f6f9;
+  width: 30%;
+  border-right: 0.1px solid #000;
+  padding: 0.9rem;
+  box-sizing: border-box;
+}
+#main tr {
+  border-bottom: 0.1px solid #000;
+}
+#main td {
+  padding-left: 0.6rem;
 }
 
 #FAQ {
@@ -132,6 +109,7 @@
   width: 100%;
   background-color: #f5f6f9;
   position: relative;
+  margin-top: 5rem;
 }
 .FAQ-text {
   height: 50%;
@@ -162,7 +140,7 @@
   margin-top: 1.5rem;
   cursor: pointer;
 }
-#FAQ button:hover{
+#FAQ button:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
@@ -199,14 +177,14 @@
 #footer li:first-child {
   border-left: none;
 }
-#footer a{
+#footer a {
   text-decoration: none;
   border-left: 0.1px solid #fff;
 }
-#footer a:first-child{
+#footer a:first-child {
   border-left: none;
 }
-#footer li:hover{
+#footer li:hover {
   transition: 0.5s;
   opacity: 0.7;
 }
