--- a/css/index.css
+++ b/css/index.css
@@ -218,17 +218,18 @@
 }
 .news-title {
   background-color: #000;
+  align-items: center;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 .news-title h1 {
   font-size: 2rem;
   color: #fff;
 }
 .news-title button {
-  height: 50%;
-  width: 15%;
+  height: 2.2rem;
+  width: 10rem;
+  font-size: 0.9rem;
   background-color: #cd0224;
   font-weight: bold;
   color: #fff;
@@ -252,7 +253,7 @@
   font-weight: bold;
   margin-left: 1rem;
 }
-#news a {
+#news a{
   text-decoration: none;
 }
 
@@ -454,7 +455,6 @@
   font-size: 0.8rem;
   font-weight: normal;
   padding: 0rem 0.6rem 0rem 0.6rem;
-  border-left: 0.05rem solid #fff;
   cursor: pointer;
   color: #fff;
 }
@@ -474,45 +474,215 @@
 }
 
 @media screen and (max-width: 768px) {
-#header nav{
-  display: none;
-}
-#header{
-  height: 6rem;
-}
-#header h1{
-  font-size: 2.2rem;
-  margin-left: 1rem;
-}
-.hamburger{
-  height: 4rem;
-  width: 4rem;
-  position: absolute;
-  top: 50%;
-  left: 60%;
-  transform: translate(0%,-50%);
-}
-.hamburger span{
-  position: absolute;
-  left: 3px;
-  display: block;
-  width: 3rem;
-  height: 0.3rem;
-  background-color: #000;
-}
-.hamburger span:nth-of-type(1){
-  top:1rem;
-}
-.hamburger span:nth-of-type(2){
-  top:2rem;
-}
-.hamburger span:nth-of-type(3){
-  top: 3rem;
-}
+  #header nav {
+    display: none;
+  }
+  #header {
+    height: 5rem;
+  }
+  #header h1 {
+    font-size: 1.7rem;
+    margin-left: 1rem;
+  }
+  .hamburger {
+    height: 4rem;
+    width: 4rem;
+    position: absolute;
+    top: 50%;
+    left: 85%;
+    transform: translate(0%, -50%);
+  }
+  .hamburger span {
+    position: absolute;
+    left: 3px;
+    display: block;
+    width: 2.5rem;
+    height: 0.3rem;
+    background-color: #000;
+  }
+  .hamburger span:nth-of-type(1) {
+    top: 1rem;
+  }
+  .hamburger span:nth-of-type(2) {
+    top: 2rem;
+  }
+  .hamburger span:nth-of-type(3) {
+    top: 3rem;
+  }
 
-#mission{
-  height:50rem;
-  width:auto;
-}
+  #mission {
+    height: 45.5rem;
+    background-position: ;
+  }
+  #mission h1 {
+    font-size: 3.5rem;
+    line-height: 5.5rem;
+    text-align: center;
+    margin-bottom: 0rem;
+  }
+  #mission h3 {
+    font-size: 1.25rem;
+    margin-left: 0rem;
+    line-height: 2rem;
+  }
+  #heart {
+    height: 34rem;
+  }
+  .heart-text {
+    top: 13rem;
+    width: 100%;
+    box-sizing: border-box;
+    padding-left: 0.75rem;
+    padding-right: 0.8rem;
+  }
+  #heart h3 {
+    font-size: 1.1rem;
+    line-height: 1.8rem;
+  }
 
+  #service {
+    height: 100rem;
+    margin-bottom: 5rem;
+  }
+  #service h1{
+    font-size: 2.1rem;
+    margin-top: 6rem;
+
+  }
+  .service-main {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .service1,
+  .service2,
+  .service3,
+  .service4 {
+    width: 100%;
+    height: 30%;
+    padding: 0 0.6rem;
+  }
+  .service1-image,
+  .service2-image,
+  .service3-image,
+  .service4-image {
+    height: 59%;
+  }
+  .service1-text,.service2-text.service3-text.service4-text{
+    height: 25%;
+    font-size: 1.1rem;
+    margin: 0.7rem 0.2rem;
+  }
+  #service h2{
+    font-size: 1.25rem;
+  }
+  #service h3{
+    line-height: 1.7rem;
+    font-size: 1.1rem;
+  }
+  .service4-text h2{
+    line-height: 2rem;
+  }
+  #service button{
+    width: 90%;
+    margin-top: 12rem;
+    font-size: 1.1rem;
+  }
+  #news{
+    height: 26rem;
+  }
+  .news-text{
+    width: 95%;
+    height: 12rem;
+  }
+  .news-title{
+    margin-bottom: 1.3rem;
+  }
+  .news-title button{
+    width: 11rem;
+    height: 2.5rem;
+    font-size: 0.95rem;
+  }
+
+  .news-first h3,
+  .news-second h3,
+  .news-third h3 {
+    padding-left: 0.7rem;
+  }
+  .news-text span{
+    margin-left: 0.6rem;
+  }
+
+  #blog{
+    height: 70rem;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  #blog h1{
+    font-size: 2.1rem;
+    margin-top: 6rem;
+  }
+  .blog-main{
+    height: 75%;
+    width: 95%;
+    flex-wrap: wrap;
+  }
+  .blog-first,.blog-second,.blog-third{
+    width: 100%;
+    height: 33.3%;
+  }
+  .blog-first-image,.blog-second-image,.blog-third-image{
+    height: 75%;
+  }
+  .blog-first-text,.blog-second-text,.blog-third-text{
+    height: 25%;
+  }
+  #blog h2{
+    font-size: 1.25rem;
+  }
+  #blog h3{
+    font-size: 1rem;
+  }
+  #blog button{
+    width: 90%;
+    font-size: 1.1rem;
+    margin-top: 4rem;
+  }
+
+  #FAQ{
+    height: 25rem;
+  }
+  #FAQ button{
+    width: 90%;
+    font-size: 1.1rem;
+  }
+  #FAQ h3{
+    font-size: 1.2rem;
+  }
+
+  #footer{
+    height: 15rem;
+    display: block;
+  }
+  #footer h6{
+    margin: 0 auto;
+    background-color: turquoise;
+    text-align: center;
+
+  }
+  #footer ul{
+    display: block;
+    text-align: center;
+    width: auto;
+    background-color:tomato;
+    height: 10rem;
+    width: 100%;
+    margin-left: 6.5rem;
+  }
+  #footer li{
+
+  }
+  #footer a{
+    border-left: none;
+  }
 }
