--- a/css/service.css
+++ b/css/service.css
@@ -210,3 +210,84 @@
   transition: 0.5s;
   opacity: 0.7;
 }
+
+@media screen and (max-width : 768px){
+#header nav{
+  display: none;
+}
+.hamburger{
+  height: 4rem;
+  width: 4rem;
+  position: absolute;
+  left: 80%;
+  margin-right: 0.5rem;
+  margin-top: 0.5fem;
+}
+.hamburger span{
+  position: absolute;
+  left: 10px;
+  display: block;
+  width: 2.3rem;
+  height: 0.25rem;
+  background-color: #000;
+}
+.hamburger span:nth-of-type(1){
+  top: 1rem;
+}
+.hamburger span:nth-of-type(2){
+  top: 1.9rem;
+}
+.hamburger span:nth-of-type(3){
+  top: 2.8rem;
+}
+
+#main{
+  height: 95rem;
+}
+.contents{
+  width: 85%;
+  top: 47%;
+}
+.first,.second,.third,.fourth{
+  display: flex;
+  flex-wrap: wrap;
+  height: 27%;
+}
+.first{
+  height: 25%;
+}
+
+.first-image,.second-image,.third-image,.fourth-image{
+  width: 100%;
+  height: 65.7%;
+}
+.first-image{
+  height: 71%;
+}
+.fourth{
+  height: 30%;
+}
+.fourth-text h1{
+  line-height: 2rem;
+}
+.fourth-image{
+  height: 59.1%;
+}
+.first-text,.second-text,.third-text,.fourth-text{
+  width: 100%;
+  margin-left: 0;
+}
+
+#FAQ h3{
+  font-size: 1.05rem;
+  line-height: 1.5rem;
+}
+#FAQ button{
+  width: 80%;
+  font-size: 1.1rem;
+
+}
+#footer h6{
+    margin: 0;
+  }
+}
