--- a/css/service.css
+++ b/css/service.css
@@ -23,6 +23,7 @@
 #header nav {
   width: 43%;
   margin-right: 2rem;
+  margin-left: auto;
 }
 #header ul {
   display: flex;
@@ -285,9 +286,33 @@
 #FAQ button{
   width: 80%;
   font-size: 1.1rem;
+}
 
+#footer{
+  height: 16rem;
+  display: block;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 #footer h6{
     margin: 0;
-  }
+    text-align: center;
+    padding:1.1rem 0
+}
+.footer-menu{
+  width: 100%;
+  margin-right: 0;
+  text-align: center;
+}
+#footer ul{
+  display: block;
+  justify-content: flex-start;
+}
+#footer li{
+  border: none;
+  padding-bottom: 1.1rem;
+}
+#footer a{
+  border: none;
+}
 }
