--- a/css/blog.css
+++ b/css/blog.css
@@ -23,6 +23,7 @@
 #header nav {
   width: 43%;
   margin-right: 2rem;
+  margin-left: auto;
 }
 #header ul {
   display: flex;
@@ -197,4 +198,85 @@
 #footer li:hover {
   transition: 0.5s;
   opacity: 0.7;
+}
+
+@media screen and (max-width : 768px){
+
+#header nav{
+  display: none;
+}
+.hamburger{
+  height: 4rem;
+  width: 4rem;
+  position: absolute;
+  left:80%;
+}
+.hamburger span{
+  position: absolute;
+  left: 8px;
+  width: 2.5rem;
+  height: 0.25rem;
+  background-color: #000;
+}
+.hamburger span:nth-of-type(1){
+  top:1rem
+}
+.hamburger span:nth-of-type(2){
+  top:1.9rem;
+}
+.hamburger span:nth-of-type(3){
+  top:2.8rem;
+}
+
+#main{
+  height: 120rem;
+}
+.contents{
+  width: 90%;
+  top: 50%;
+  height: 90%;
+}
+.contents1,.contents2,.contents3,.contents4,.contents5,.contents6{
+  width: 100%;
+  height: 16%;
+}
+.contents1-image,.contents2-image,.contents3-image,.contents4-image,.contents5-image,.contents6-image{
+  height: 70%;
+}
+
+#FAQ button{
+  width: 80%;
+  font-size: 1.1rem;
+}
+#FAQ h3{
+  font-size: 1.05rem;
+  line-height: 1.8rem;
+}
+#footer{
+  height: 16rem;
+  display: block;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.footer-menu{
+  width: 100%;
+  text-align: center;
+  margin-right: 0;
+}
+.footer-menu ul{
+  display: block;
+  justify-content: flex-start;
+}
+.footer-menu li{
+  border: none;
+  padding-bottom: 1.1rem;
+}
+#footer a{
+  border: none;
+}
+#footer h6{
+  margin: 0;
+  text-align: center;
+  padding: 1.1rem 0;
+}
 }
