--- a/css/contact.css
+++ b/css/contact.css
@@ -23,6 +23,7 @@
 #header nav {
   width: 43%;
   margin-right: 2rem;
+  margin-left: auto;
 }
 #header ul {
   display: flex;
@@ -135,3 +136,69 @@ input[type="submit"]{
   opacity: 0.7;
 }
 
+@media screen and (max-width : 768px){
+#header nav{
+  display: none;
+}
+.hamburger{
+  position: absolute;
+  left: 80%;
+  height: 4rem;
+  width: 4rem;
+}
+.hamburger span{
+  position: absolute;
+  left: 8px;
+  height: 0.25rem;
+  width: 2.3rem;
+  display: block;
+  background-color: #000;
+}
+.hamburger span:nth-of-type(1){
+  top: 1rem;
+}
+.hamburger span:nth-of-type(2){
+  top: 1.9rem;
+}
+.hamburger span:nth-of-type(3){
+  top: 2.8rem;
+}
+
+#main{
+  height: 39rem;
+}
+.main-form{
+  width: 90%;
+}
+input[type="submit"]{
+  width: 80%;
+}
+
+#footer{
+  height: 16rem;
+  display: block;
+  justify-content: flex-start;
+  align-items: normal;
+}
+#footer h6{
+  text-align: center;
+  margin: 0;
+  padding-top: 1.1rem;
+  padding-bottom: 1.1rem;
+}
+.footer-menu{
+  width: 80%;
+  margin: 0 auto;
+}
+.footer-menu ul{
+  justify-content: flex-start;
+  display: block;
+}
+#footer a{
+  border-left: none;
+}
+#footer li{
+  text-align: center;
+  padding-bottom: 1.1rem;
+}
+}
