--- a/css/service.css
+++ b/css/service.css
@@ -185,6 +185,7 @@
 .footer-menu {
   width: 33%;
   margin-right: 14rem;
+  text-align: center;
 }
 .footer-menu ul {
   display: flex;
@@ -220,13 +221,12 @@
   height: 4rem;
   width: 4rem;
   position: absolute;
-  left: 80%;
-  margin-right: 0.5rem;
+  right: 0%;
   margin-top: 0.5fem;
 }
 .hamburger span{
   position: absolute;
-  left: 10px;
+  left: 12px;
   display: block;
   width: 2.3rem;
   height: 0.25rem;
@@ -289,7 +289,7 @@
 }
 
 #footer{
-  height: 16rem;
+  height: 17rem;
   display: block;
   justify-content: flex-start;
   align-items: flex-start;
@@ -297,7 +297,7 @@
 #footer h6{
     margin: 0;
     text-align: center;
-    padding:1.1rem 0
+    padding:1.15rem 0
 }
 .footer-menu{
   width: 100%;
@@ -310,7 +310,8 @@
 }
 #footer li{
   border: none;
-  padding-bottom: 1.1rem;
+  padding-bottom: 1.15rem;
+  font-size: 0.8rem;
 }
 #footer a{
   border: none;
