--- a/css/blog.css
+++ b/css/blog.css
@@ -229,25 +229,25 @@
 }
 
 #main{
-  height: 120rem;
+  height: 180rem;
 }
 .contents{
-  width: 90%;
+  width: 85%;
   top: 50%;
-  height: 90%;
+  height: 93%;
 }
 .contents1,.contents2,.contents3,.contents4,.contents5,.contents6{
   width: 100%;
-  height: 16%;
+  height: 17%;
 }
 .contents1-image,.contents2-image,.contents3-image,.contents4-image,.contents5-image,.contents6-image{
-  height: 70%;
+  height: 85%;
 }
 #FAQ{
   height: 25rem;
 }
 #FAQ button{
-  width: 80%;
+  width: 40%;
   font-size: 1.1rem;
 }
 #FAQ h3{
@@ -255,13 +255,13 @@
   line-height: 1.8rem;
 }
 #footer{
-  height: 18.5rem;
-  display: block;
-  justify-content: flex-start;
-  align-items: flex-start;
+  height: 16rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .footer-menu{
-  width: 100%;
+  width: fit-content;
   text-align: center;
   margin-right: 0;
 }
@@ -271,7 +271,7 @@
 }
 .footer-menu li{
   border: none;
-  padding-bottom: 1.3rem;
+  padding-bottom: 1.1rem;
   font-size: 0.85rem;
 }
 #footer a{
@@ -280,7 +280,7 @@
 #footer h6{
   margin: 0;
   text-align: center;
-  padding: 1.3rem 0;
+  padding: 1.1rem 0;
   font-size: 0.85rem;
 }
 }
