--- a/css/news.css
+++ b/css/news.css
@@ -222,7 +222,7 @@
 }
 
 #FAQ button{
-  width: 80%;
+  width: 40%;
   font-size: 1rem;
 }
 #FAQ h3{
@@ -234,18 +234,17 @@
 }
 
 #footer{
-  height: 16.5rem;
-  display: block;
-  justify-content: flex-start;
-  align-items: flex-start;
+  height: 16rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 #footer h6{
   margin: 0;
   padding: 1.15rem 0;
-  text-align: center;
 }
 .footer-menu{
-  width: 100%;
+  width: fit-content;
   text-align: center;
   margin-right: 0;
 }
