--- a/css/reqruit.css
+++ b/css/reqruit.css
@@ -234,7 +234,7 @@
   height: 23rem;
 }
 #FAQ button{
-  width: 80%;
+  width: 40%;
   font-size: 1.05rem;
 }
 #FAQ h3{
@@ -242,20 +242,18 @@
   line-height: 1.65rem;
 }
 #footer{
-  height: 17rem;
-  display: block;
-  justify-content: flex-start;
-  align-items: flex-start;
+  height: 16rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 #footer h6{
   margin: 0;
-  padding: 1.2rem 0;
-  text-align: center;
+  padding: 0;
 }
 .footer-menu{
-  width: 80%;
+  width: fit-content;
   margin-right: 0;
-  margin: 0 auto;
   text-align: center;
 }
 .footer-menu ul{
@@ -264,7 +262,7 @@
 }
 #footer li{
   border-left: none;
-  padding-bottom: 1.2rem;
+  padding-bottom: 1.1rem;
 }
 #footer a{
   border: none;
