--- a/css/service.css
+++ b/css/service.css
@@ -222,7 +222,6 @@
   width: 4rem;
   position: absolute;
   right: 0%;
-  margin-top: 0.5fem;
 }
 .hamburger span{
   position: absolute;
@@ -243,37 +242,25 @@
 }
 
 #main{
-  height: 95rem;
+  height: 135rem;
 }
 .contents{
   width: 85%;
-  top: 47%;
+  top: 45%;
 }
 .first,.second,.third,.fourth{
   display: flex;
   flex-wrap: wrap;
-  height: 27%;
+  height: 28%;
 }
-.first{
-  height: 25%;
-}
-
 .first-image,.second-image,.third-image,.fourth-image{
   width: 100%;
-  height: 65.7%;
-}
-.first-image{
-  height: 71%;
-}
-.fourth{
-  height: 30%;
+  height: 84%;
 }
 .fourth-text h1{
   line-height: 2rem;
 }
-.fourth-image{
-  height: 59.1%;
-}
+
 .first-text,.second-text,.third-text,.fourth-text{
   width: 100%;
   margin-left: 0;
@@ -284,15 +271,15 @@
   line-height: 1.5rem;
 }
 #FAQ button{
-  width: 80%;
+  width: 40%;
   font-size: 1.1rem;
 }
 
 #footer{
-  height: 17rem;
-  display: block;
-  justify-content: flex-start;
-  align-items: flex-start;
+  height: 16rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 #footer h6{
     margin: 0;
@@ -300,9 +287,9 @@
     padding:1.15rem 0
 }
 .footer-menu{
-  width: 100%;
   margin-right: 0;
   text-align: center;
+  width: fit-content;
 }
 #footer ul{
   display: block;
